# code-lead-succeed-example-code

./: Dockerfile  LICENSE  README.md
.github/workflows/: ai-reviewer-project.yaml  bigquery-lib.yaml  builds-project.yaml  code-analysis-tool.yaml  document-tool.yaml  state-manager-lib.yaml
libs/bigquery/: README.md  pyproject.toml
libs/bigquery/src/bigquery/: dataset.py  dataset_test.py  datatable.py  datatable_test.py
libs/code_analysis_tool/: README.md  pyproject.toml
libs/code_analysis_tool/src/code_analysis_tool/: github_client.py  github_client_test.py  interfaces.py  pull_request_utils.py  pull_request_utils_test.py
libs/code_analysis_tool/src/code_analysis_tool/examples/: main.py
libs/code_analysis_tool/src/code_analysis_tool/models/: pull_request.py  repository.py  user.py
libs/document_tool/: README.md  hello.py  pyproject.toml
libs/document_tool/src/document_tool/: confluence_document_fetcher.py  confluence_document_fetcher_test.py  interfaces.py
libs/document_tool/src/document_tool/examples/: main.py
libs/document_tool/src/document_tool/models/: document.py
libs/github_tool/: pyproject.toml
libs/github_tool/src/github_tool/: github_client.py  github_client_test.py  pull_request_utils_test.py
libs/github_tool/src/github_tool/examples/: main.py
libs/state_manager/: README.md  pyproject.toml
libs/state_manager/src/state_manager/: gcs.py  gcs_test.py  interfaces.py  s3.py  s3_test.py
projects/ai_code_reviewer/: README.md  code_reviewer.py  code_reviewer_test.py  github_app.py  github_pr_handler.py  github_pr_handler_test.py  main.py  pyproject.toml  settings.toml
projects/ai_code_reviewer/models/: __init__.py  code_review_feedback.py
projects/builds/: README.md  main.py  main_test.py  pyproject.toml  settings.toml  setup.py
projects/builds/examples/: github-action-workflow-response.json
projects/builds/models/: build.py  state.py
projects/code_quality_agent/: README.md  llm_parser.py  main.py  pyproject.toml  settings.toml
projects/code_quality_agent/edges/: code_quality_edges.py  context_analysis_edges.py  startup_system.py
projects/code_quality_agent/graphs/: code_quality_graph.py  code_quality_graph_test.py  code_quality_nodes.py  context_analysis_graph.py  context_analysis_graph_test.py  context_analysis_nodes.py
projects/code_quality_agent/models/: cvs_integrations.py  employee.py  levels.py
projects/code_quality_agent/scripts/: ctx_agent_manual_run.py
projects/code_quality_agent/states/: code_quality_state.py  context_analysis_feedback.py  context_analysis_state.py
