[project]
name = "bigquery"
version = "0.1.0"
description = ""
authors = [
    { name="Tony Truong", email="serinth@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "google-cloud-bigquery>=3.27.0",
    "loguru>=0.7.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"