[project]
name = "code-quality-agent"
version = "0.1.0"
description = "A sub agent as part of a productivity AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dynaconf>=3.2.6",
    "langchain-ollama>=0.2.2",
    "langchain>=0.3.13",
    "langgraph>=0.2.60",
    "loguru>=0.7.3",
    "pydantic>=2.10.4",
    "requests>=2.32.3",
    "langchain-community>=0.3.13",
    "code-analysis-tool",
    "document-tool",
    "langchain-openai>=0.2.14",
    "langchain-anthropic>=0.3.1",
]

[tool.uv.sources]
code-analysis-tool = { workspace = true }
document-tool = { workspace = true }

[tool.uv.workspace]
members = ["../../libs/*"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
